# hello-world-python

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  python-app.yml
src/: hello_world.py  utils.py
tests/features/: basic.feature  person.feature
tests/features/steps/: steps.py
tests/unit/: test_basic.py  test_utils.py
